--- a/css/main.css
+++ b/css/main.css
@@ -492,6 +492,11 @@ a.button-turquoise {
 .sub-pages-container .md-requirements .image-api-table th {
   border-right: 1px solid #fff;
   text-align: center;
+  padding: 8px 5px;
+}
+
+.sub-pages-container .md-requirements .image-api-table td {
+  padding: 8px 5px;
 }
 
 .sub-pages-container .md-requirements .legend {
@@ -599,6 +604,10 @@ a.button-turquoise {
 
 .left-indent {
   text-indent: 20px;
+}
+
+.visibility-hidden {
+  visibility: hidden;
 }
 
 .code-block {
