--- a/css/main.css
+++ b/css/main.css
@@ -464,6 +464,11 @@ a.button-turquoise {
   padding-left: 0;
 }
 
+.sub-pages-container .image-api .editors-authors .from,
+.sub-pages-container .metadata-api .editors-authors .from {
+  color: #999;
+}
+
 .sub-pages-container .image-api .editors-authors sup,
 .sub-pages-container .metadata-api .editors-authors sup {
   color: #999;
@@ -642,6 +647,7 @@ a.button-turquoise {
   border-radius: 3px;
   display: inline-block;
   font-family: monospace;
+  font-size: 13px;
   line-height: 1.6;
   margin: 0;
   padding: 4px 12px;
